--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,3 +29,77 @@ body {
   margin: 0;
   font-size: 16px;
 }
+
+
+/* Currently selected axix */
+.axis-label {
+  font-weight: 300;
+  /* color: #979595f8; */
+}
+
+.axis-label.x-label.selected {
+  font-weight: 600 !important;
+  color: 'black'!important;
+  fill: 'black' !important;
+}
+
+.axis-label.y-label.selected {
+  font-weight: 600 !important;
+  /* color: 'black' !important;
+  fill: 'black' !important; */
+}
+
+.selected {
+  fill: 'black' !important;
+}
+
+.axis-label:hover {
+  font-weight: 600 !important;
+}
+
+
+.article {
+  margin-top: 50px;
+}
+
+
+/* Spacing for the tool-tip */
+hr {
+  margin: 5px;
+}
+
+h1 {
+  font-size: 42pt;
+}
+
+
+#newspaper {
+    margin-left: 0px;
+    padding-top: 20px;
+  }
+
+.head-img {
+  width: 150px;
+  height: 150px;
+}
+
+.jumbotron {
+  margin-left: 75px;
+}
+
+/* Arrow tip for the toolTip */
+.d3-tip:after {
+  box-sizing: border-box;
+  display: inline;
+  font-size: 40px;
+  width: 100%;
+  line-height: 1;
+  color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  text-align: center;
+  content: "\25B8";
+  left: 51%;
+  top: 30%;
+  /* this stops the flickering on-and-off with mouse move */
+  pointer-events: none!important; 
+}
